--- a/src/main/resources/templates/evento/eventoEdit.html
+++ b/src/main/resources/templates/evento/eventoEdit.html
@@ -6,6 +6,232 @@
 </head>
 <body>
 	<div layout:fragment="content">
+	
+	
+		<!-- finestra modale di lookup delle anagrafiche -->
+		<div id="persona-modal" class="modal fade modal-lookup-persone" data-model-index="1" role="dialog">
+			<div class="modal-dialog modal-lg">
+				<div class="modal-content">
+					<div class="modal-header">
+						<button type="button" class="close" data-dismiss="modal"><span aria-hidden="true">×</span>
+						</button>
+						<h4 class="modal-title" id="myModalLabel1" th:text="#{label.cerca_persona}">Cerca anagrafica</h4>
+					</div>
+					<div class="modal-body">
+						<table id="tabella-modale" class="datatable-responsive-search table table-striped table-bordered dt-responsive nowrap" cellspacing="0" width="100%">
+							<thead>
+								<tr>
+									<th th:text="#{label.codice_fiscale}">Codice fiscale</th>
+									<th th:text="#{label.nome}">Nome</th>
+									<th th:text="#{label.cognome}">Cognome</th>
+									<th></th>
+								</tr>
+							</thead>
+							<tbody>
+								<!-- popolata con una request ajax -->
+							</tbody>
+						</table>
+					</div>
+					<div class="modal-footer">
+						<button type="button" class="btn btn-primary" data-dismiss="modal" th:text="#{label.chiudi}">Chiudi</button>
+					</div>
+				</div>
+			</div>
+		</div>
+		
+		<!-- finestra modale di creazione delle anagrafiche -->
+		<div id="create-persona-modal" class="modal fade modal-create-persona" data-model-index="2" role="dialog">
+			<div class="modal-dialog modal-lg">
+				<div class="modal-content">
+					<div class="modal-header">
+						<button type="button" class="close" data-dismiss="modal"><span aria-hidden="true">×</span>
+						</button>
+						<h4 class="modal-title" id="myModalLabel2" th:text="#{label.crea_persona}">Crea persona</h4>
+					</div>
+					<div class="modal-body">
+						<form class="form-horizontal form-label-left" id="createAnagraficaEventForm"
+							method="post" enctype="multipart/form-data"
+							novalidate="novalidate">
+							
+							<!-- COGNOME -->
+							<div class="item form-group">
+								<label class="control-label col-md-3 col-sm-3 col-xs-11" for="cognome_persona">
+									<span th:text="#{label.cognome}">Cognome</span>
+									<span class="required">*</span>
+								</label>
+								<div class="col-lg-5 col-md-7 col-sm-7 col-xs-12">
+									<input id="cognome_persona"
+										required="required"	class="form-control col-md-7 col-xs-12"
+										type="text" name="anagrafica.cognome" />
+								</div>
+							</div>
+							
+							<!-- NOME -->
+							<div class="item form-group">
+								<label class="control-label col-md-3 col-sm-3 col-xs-11" for="nome_persona">
+									<span th:text="#{label.nome}">Nome</span>
+									<span class="required">*</span>
+								</label>
+								<div class="col-lg-5 col-md-7 col-sm-7 col-xs-12">
+									<input id="nome_persona"
+										required="required"	class="form-control col-md-7 col-xs-12"
+										type="text" name="anagrafica.nome" />
+								</div>
+							</div>
+							
+							<!-- CODICE FISCALE -->
+							<div class="item form-group">
+								<label class="control-label col-md-3 col-sm-3 col-xs-11" for="codice_fiscale">
+									<span th:text="#{label.codice_fiscale}">Codice Fiscale</span>
+									<span class="required">*</span>
+								</label>
+								<div class="col-lg-5 col-md-7 col-sm-7 col-xs-12">
+									<input id="codice_fiscale"
+										required="required"	class="form-control col-md-7 col-xs-12"
+										type="text" name="anagrafica.codiceFiscale" />
+								</div>
+							</div>
+							
+							<!-- STRANIERO -->
+							<div class="item form-group">
+								<label class="control-label col-md-3 col-sm-3 col-xs-11" for="codice_fiscale">
+									<span th:text="#{label.straniero}">Straniero</span>
+									<span class="required">*</span>
+								</label>
+								<div class="col-lg-5 col-md-7 col-sm-7 col-xs-12">
+									<input id="straniero"
+										required="required"	class="form-control col-md-7 col-xs-12 flat"
+										type="checkbox" name="anagrafica.stranierio" />
+								</div>
+							</div>
+						</form>
+					</div>
+					<div class="modal-footer">
+						<button type="button" class="btn btn-primary" data-dismiss="modal" th:text="#{label.chiudi}">Chiudi</button>
+						<button type="button" onclick="submitCreateAngraficaEvento()" class="btn btn-primary" th:text="#{label.salva}">Salva</button>
+					</div>
+				</div>
+			</div>
+		</div>
+		
+		<!-- finestra modale di aggiunta delle persone -->
+		<div id="add-persona-modal" class="modal fade modal-add-persona" data-model-index="3" role="dialog">
+			<div class="modal-dialog modal-lg">
+				<div class="modal-content">
+					<div class="modal-header">
+						<button type="button" class="close" data-dismiss="modal"><span aria-hidden="true">×</span>
+						</button>
+						<h4 class="modal-title" id="myModalLabel2" th:text="#{label.inserisci_persona}">Inserisci persona</h4>
+					</div>
+					<div class="modal-body">
+						<form name="addPersonaEvento" class="form-horizontal form-label-left"
+								th:action="@{|/provider/${eventoWrapper.evento.provider.id}/evento/addPersonaTo|}" 
+								th:object="${eventoWrapper.tempPersonaEvento}" method="post" enctype="multipart/form-data"
+								novalidate="novalidate">
+							
+							<!-- input type="hidden" id="targetTable" / -->
+						
+							<!-- COGNOME -->
+							<div class="item form-group">
+								<label class="control-label col-md-3 col-sm-3 col-xs-11" for="cognome_persona">
+									<span th:text="#{label.cognome}">Cognome</span>
+									<span class="required">*</span>
+								</label>
+								<div class="col-lg-5 col-md-7 col-sm-7 col-xs-12">
+									<input id="cognome_persona"
+										required="required"	class="form-control col-md-7 col-xs-12"
+										type="text" th:field="*{anagrafica.cognome}" />
+								</div>
+							</div>
+							
+							<!-- NOME -->
+							<div class="item form-group">
+								<label class="control-label col-md-3 col-sm-3 col-xs-11" for="nome_persona">
+									<span th:text="#{label.nome}">Nome</span>
+									<span class="required">*</span>
+								</label>
+								<div class="col-lg-5 col-md-7 col-sm-7 col-xs-12">
+									<input id="nome_persona"
+										required="required"	class="form-control col-md-7 col-xs-12"
+										type="text" th:field="*{anagrafica.nome}"  />
+								</div>
+							</div>
+							
+							<!-- CODICE FISCALE -->
+							<div class="item form-group">
+								<label class="control-label col-md-3 col-sm-3 col-xs-11" for="codice_fiscale">
+									<span th:text="#{label.codice_fiscale}">Codice Fiscale</span>
+									<span class="required">*</span>
+								</label>
+								<div class="col-lg-5 col-md-7 col-sm-7 col-xs-12">
+									<input id="codice_fiscale"
+										required="required"	class="form-control col-md-7 col-xs-12"
+										type="text" th:field="*{anagrafica.codiceFiscale}"  />
+								</div>
+							</div>
+							
+							<!-- STRANIERO -->
+							<div class="item form-group">
+								<label class="control-label col-md-3 col-sm-3 col-xs-11" for="codice_fiscale">
+									<span th:text="#{label.straniero}">Straniero</span>
+									<span class="required">*</span>
+								</label>
+								<div class="col-lg-5 col-md-7 col-sm-7 col-xs-12">
+									<input id="straniero"
+										required="required"	class="form-control col-md-7 col-xs-12 flat"
+										type="checkbox"  th:field="*{anagrafica.straniero}"  />
+								</div>
+							</div>
+							
+							<!-- RUOLO -->
+							<div class="item form-group">
+								<label class="control-label col-md-3 col-sm-3 col-xs-11" for="codice_fiscale">
+									<span th:text="#{label.ruolo}">Ruolo</span>
+									<span class="required">*</span>
+								</label>
+								<div class="col-lg-5 col-md-7 col-sm-7 col-xs-12">
+									<select
+										class="selectpicker required selectRuolo"
+										th:field="*{ruolo}"
+										data-width="100%" data-style="btn-primary"
+										data-actions-box="true" data-size="10"
+										data-hide-disabled="false"
+										title="Seleziona un ruolo">
+										<option
+											th:each="ruolo, row: ${T(it.tredi.ecm.dao.enumlist.RuoloPersonaEventoEnum).values()}"
+											th:value="${ruolo}"
+											th:text="${ruolo.nome}">ruolo selezionato
+										</option>
+									</select>
+								</div>
+							</div>
+							
+							<!-- QUALIFICA -->
+							<div class="item form-group">
+								<label class="control-label col-md-3 col-sm-3 col-xs-11" for="codice_fiscale">
+									<span th:text="#{label.qualifica}">Qualifica</span>
+									<span class="required">*</span>
+								</label>
+								<div class="col-lg-5 col-md-7 col-sm-7 col-xs-12">
+									<input id="straniero"
+										required="required"	class="form-control col-md-7 col-xs-12"
+										type="text" th:field="*{qualifica}"  />
+								</div>
+							</div>
+							
+							<input id="targetTable" type="submit" name="addPersonaTo" style="display: none;" />
+							
+						</form>
+					</div>
+					<div class="modal-footer">
+						<button type="button" class="btn btn-primary" data-dismiss="modal" th:text="#{label.chiudi}">Chiudi</button>
+						<!--  button type="button" onclick="addPersona('add-persona-modal')" class="btn btn-primary" th:text="#{label.inserisci}">Inserisci</button--> 
+						<label for="targetTable" class="btn btn-success pull-right" th:text="#{label.invia}">Invia</label>
+					</div>
+				</div>
+			</div>
+		</div>
+	
 
 		<div class="row">
 			<div class="col-xs-12">
@@ -49,6 +275,10 @@
 		</div>
 		<script th:inline="javascript">
 		/*<![CDATA[*/
+		           
+		    var tables = new Array();
+		    var anagraficaLoaded;       
+		           
 			var text_max = 3000;
 			$('#counter').html(text_max + ' '+[[#{label.caratteri_rimanenti}]]);
 
@@ -144,6 +374,7 @@
 				if($("#professioni")[0]) {
 					abilitaDiscipline($("#professioni")[0]);
 				}
+				
 			});
 
 			function abilitaDiscipline(professioni) {
@@ -172,6 +403,107 @@
 				$('#discipline').selectpicker('refresh');
 			}
 
+			function openLookupPersone(target,type){
+				var table = $('#tabella-modale').DataTable();
+				table.clear();
+				urlGet = [[@{/provider/}]] + [[${eventoWrapper.evento.provider.id}]] + "/anagraficaEventoList";
+				$.get( urlGet, function(data){
+					anagraficaLoaded = data;
+					for(var item = 0; item < data.length; item++){
+						var obj = data[item];
+						table.row.add([
+							obj.anagrafica.codiceFiscale,
+							obj.anagrafica.nome,
+							obj.anagrafica.cognome,
+							'<a class="btn btn-primary btn-lookup" onclick="setAnagraficaEvento('+ target + ',' + type + ',' + item + ')">'+[[#{label.seleziona}]]+'</a>'
+						]).draw(false);
+					}
+				});
+			}
+			
+			function submitCreateAngraficaEvento(){
+				var fd = new FormData(document.querySelector("#createAnagraficaEventForm"));
+				fd.append([[${_csrf.parameterName}]],[[${_csrf.token}]]);
+				$.ajax({
+				  url: [[@{|/provider/${eventoWrapper.evento.provider.id}/createAnagraficaEvento|}]],
+				  type: "POST",
+				  contentType: "application/json",
+				  data: fd,
+				  processData: false,  // tell jQuery not to process the data
+				  contentType: false,   // tell jQuery not to set contentType
+				  
+				  success : function(result) {
+                		//TODO prendere i dati dell'anagrafica salvata e metterli nella popup AddPersona
+					 	 setAnagraficaEventoOnModale()
+                	},
+                	error : function(result){
+                		sendNotifyStatic([[#{message.errore}]], [[#{message.errore_fileupload}]], "error");
+                	}
+				});
+			}
+			
+			function openAddPersona(target,type){
+				$('#targetTable').val(target);
+				$('#typePersona').val(type);
+			}
+			
+			function addPersona(modale){
+				var targetTable = $('#targetTable').val();
+				var typePersona = $('#typePersona').val();
+				
+				var containerModale = $('#' + modale);
+				
+				var persona = new Array();
+				persona['cognome'] = containerModale.find("[name='anagrafica.cognome']").val();
+				persona['nome'] = containerModale.find("[name='anagrafica.nome']").val();
+				persona['straniero'] = containerModale.find("[name='anagrafica.straniero']").val();
+				persona['codiceFiscale'] = containerModale.find("[name='anagrafica.codiceFiscale']").val();
+				persona['ruolo'] = containerModale.find("[name='ruolo']").val();
+				persona['qualifica'] = containerModale.find("[name='qualifica']").val();
+				
+				setPersonaEvento(targetTable, typePersona, persona);
+			}
+			
+			function setPersonaEvento(target,type,persona){
+				if(type == 'full'){
+				}else{
+					var index = $('#' + target + ' tr').length;
+					var row = $("<tr/>");
+					
+					var cognomeHidden = "<input type='hidden' name='" + target + "[" + index + "].anagrafica.cognome' value='" + persona['cognome'] + "' />";
+					var nomeHidden = "<input type='hidden' name='" + target + "[" + index + "].anagrafica.nome' value='" + persona['cognomenome'] + "' />";
+					var codiceFiscaleHidden = "<input type='hidden' name='" + target + "[" + index + "].anagrafica.codiceFiscale' value='" + persona['codiceFiscale'] + "' />";
+					var stranieroHidden = "<input type='hidden' name='" + target + "[" + index + "].anagrafica.straniero' value='" + persona['straniero'] + "' />";
+					var ruoloHidden = "<input type='hidden' name='" + target + "[" + index + "].ruolo' value='" + persona['ruolo'] + "' />";
+					var qualificaHidden = "<input type='hidden' name='" + target + "[" + index + "].qualifica' value='" + persona['qualifica'] + "' />";
+					
+					var cognome = "<span>" + persona['cognome'] + "<span/>";
+					var nome = "<span>" + persona['nome'] + "<span/>";
+					var codiceFiscale = "<span>" + persona['codiceFiscale'] + "<span/>";
+					var straniero = "<span>" + persona['straniero'] + "<span/>";
+					var ruolo = "<span>" + persona['ruolo'] + "<span/>";
+					var qualifica = "<span>" + persona['qualifica'] + "<span/>";
+					
+					row.append("<td>" + persona['cognome'] + cognomeHidden + "</td>");
+					row.append("<td>" + persona['nome'] + nomeHidden + "</td>");
+					row.append("<td>" + persona['codiceFiscale'] + codiceFiscaleHidden + "</td>");
+					row.append("<td>" + persona['straniero'] + stranieroHidden + "</td>");
+					row.append("<td>" + persona['ruolo'] + ruoloHidden + "</td>");
+					row.append("<td>" + persona['qualifica']  + qualificaHidden + "</td>");
+					
+					var table = tables['#' + target];
+					table.row.add([
+						persona['cognome'] + cognomeHidden,
+						persona['nome'] + nomeHidden,
+						persona['codiceFiscale'] + codiceFiscaleHidden,
+						persona['qualifica'] + qualificaHidden,
+						persona['straniero'] + stranieroHidden
+					]).draw();
+				}
+			}
+			
+			function openCreatePersona(){
+			}
 
 		/*]]>*/
 		</script>
