--- a/src/main/resources/templates/evento/eventoRESEdit.html
+++ b/src/main/resources/templates/evento/eventoRESEdit.html
@@ -483,52 +483,8 @@
 						<span th:text="#{label.responsabili_scientifici}">Responsabili scientifici</span>
 						<span class="required">*</span>
 					</label>
-
-					<div class="col-xs-12" id="responsabili">
-					
-					<table id="responsabiliScientifici" class="datatable-responsive-responsabili table table-striped table-bordered dt-responsive nowrap" cellspacing="0" width="100%">
-							 <thead>
-								 <tr>
-									 <th th:text="#{label.cognome}">Cognome</th>
-									<th th:text="#{label.nome}">Nome</th>
-									<th th:text="#{label.cf}">CF</th>
-									<th th:text="#{label.qualifica}">Qualifica</th>
-									<th>
-										<a class="btn btn-primary" onclick="openLookupPersone('responsabiliScientifici','')" data-toggle="modal" data-target=".modal-lookup-persone">
-											<span>
-												<i class="fa fa-search"></i>
-											</span>
-										</a>
-										<a class="btn btn-primary" onclick="openCreatePersona()" data-toggle="modal" data-target=".modal-create-persona">
-											<span>
-												<i class="fa fa-plus"></i>
-											</span>
-										</a>
-										<a class="btn btn-primary" onclick="openAddPersona('responsabiliScientifici','')" data-toggle="modal" data-target=".modal-add-persona">
-											<span>
-												<i class="fa fa-plus"></i>
-											</span>
-										</a>
-									</th>
-								</tr>
-							</thead>
-							<tbody>
-								<tr th:each="persona, status : ${eventoWrapper.responsabiliScientifici}">
-									<td th:text="${persona.anagrafica.cognome}"></td>
-									<td th:text="${persona.anagrafica.nome}"></td>
-									<td th:text="${persona.anagrafica.codiceFiscale}"></td>
-									<td th:text="${persona.qualifica}"></td>
-									<td>
-										<a class="btn btn-primary" th:href="@{|/provider/${eventoWrapper.providerId}/evento/removeResponsabile/${__${status.index}__}|}">
-											<span>
-												<i class="fa fa-trash"></i>
-											</span>
-										</a>
-									</td>								
-								</tr>
-							</tbody>
-						</table>
-					
+					<div class="col-xs-offset-1 col-xs-10">
+						<th:block th:include="evento/eventoEdit :: responsabiliScientifici" />
 					</div>
 				</div>
 
@@ -542,8 +498,8 @@
 						<span class="required">*</span>
 					</label>
 
-					<div class="col-lg-5 col-md-7 col-sm-7 col-xs-12" id="docenti-relatori-tutor">
-					**TODO**
+					<div class="col-xs-offset-1 col-xs-10">
+						<th:block th:include="evento/eventoEdit :: docenti" />
 					</div>
 				</div>
 
@@ -1259,8 +1215,7 @@
 								<span class="required">*</span>
 							</label>
 						</div>
-
-				</div>
+					</div>
 				</div>
 
 				<input id="submitButton" type="submit" style="display: none;" />
@@ -1332,14 +1287,6 @@
 				    if(gotoLink)
 				    	 $(document).scrollTo(gotoLink);
 				
-				    
-				    tables['#responsabiliScientifici'] = $('#responsabiliScientifici').DataTable({
-				    	"bFilter" : false,
-						"bInfo" : false,
-						"bPaginate" : false,
-						"ordering" : false,
-				    });  
-
 				 	 //gestione evento iCheck su radio riguardante la lingua
 					$(".verifica-distanza").on("ifChecked", function() {
 						if($(this).val() == 'true')
